优化fastDfs初始化配置 添加connector组件方式，实现优雅停机方式，

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 server.port=7071
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=10MB
-
 spring.jmx.enabled=false
+spring.application.name=tools
+endpoints.shutdown.enabled=true
+endpoints.shutdown.sensitive=false
+endpoints.shutdown.path=/bye-bye
+
+fastDfsFile=fast-dfs.properties
